Finished Authentication and Authorization.